Change email address

--- a/down-manual.html
+++ b/down-manual.html
@@ -58,13 +58,13 @@
     </div>
 
     <div class="email">
-      <a href="mailto:info@yihsienhung.com"><h1>info@yihsienhung.com</h1></a>
+      <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
     </div>
 
     <div class="email-tablet">
-      <a href="mailto:info@yihsienhung.com"><h1>info@yihsienhung.com</h1></a>
+      <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
     </div>
-
+    
     <div class="drop-menu">
       <ul>
         <li><a href="down-manual.html">Down Manual</a></li>
