--- a/down-manual.html
+++ b/down-manual.html
@@ -27,25 +27,25 @@
     <!-- header -->
     <header class="box">
         <div class="logo">
-          <a href="index.html"><img src="./resources/images/logo.png"/></a>
+          <a href="about-cv.html"><img src="./resources/images/logo.png"/></a>
         </div>
 
         <div class="logo-tablet">
-          <a href="index.html"><img src="./resources/images/logo.png"/></a>
+          <a href="about-cv.html"><img src="./resources/images/logo.png"/></a>
         </div>
 
         <!-- button desktop -->
         <div class="button-desktop">
-            <a href="portfolio.html"><div class="btn-portfolio">Portfolio</div></a>
-            <a href="index.html"><div class="btn-about-cv">About + CV</div></a>
+            <a href="index.html"><div class="btn-portfolio">Portfolio</div></a>
+            <a href="about-cv.html"><div class="btn-about-cv">About + CV</div></a>
             <div class="btn-contact">Contact</div>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
 
         <!-- button tablet -->
         <div class="button-tablet">
-            <a href="portfolio.html"><div class="btn-portfolio-tablet">Portfolio</div></a>
-            <a href="index.html"><div class="btn-about-cv-tablet">About + CV</div></a>
+            <a href="index.html"><div class="btn-portfolio-tablet">Portfolio</div></a>
+            <a href="about-cv.html"><div class="btn-about-cv-tablet">About + CV</div></a>
             <a href="#"><div class="btn-contact-tablet">Contact</div></a>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
@@ -64,7 +64,7 @@
     <div class="email-tablet">
       <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
     </div>
-    
+
     <div class="drop-menu">
       <ul>
         <li><a href="down-manual.html">Down Manual</a></li>
