--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
     <!-- header -->
     <header class="box">
         <div class="logo">
-          <a href="index.html"><img src="./resources/images/logo.png"/></a>
+          <a href="about-cv.html"><img src="./resources/images/logo.png"/></a>
         </div>
 
         <div class="logo-tablet">
-          <a href="index.html"><img src="./resources/images/logo.png"/></a>
+          <a href="about-cv.html"><img src="./resources/images/logo.png"/></a>
         </div>
 
         <!-- button desktop -->
         <div class="button-desktop">
-            <a href="portfolio.html"><div class="btn-portfolio">Portfolio</div></a>
-            <a href="index.html"><div class="btn-about-cv">About + CV</div></a>
+            <a href="index.html"><div class="btn-portfolio">Portfolio</div></a>
+            <a href="about-cv.html"><div class="btn-about-cv">About + CV</div></a>
             <div class="btn-contact">Contact</div>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
 
         <!-- button tablet -->
         <div class="button-tablet">
-            <a href="portfolio.html"><div class="btn-portfolio-tablet">Portfolio</div></a>
-            <a href="index.html"><div class="btn-about-cv-tablet">About + CV</div></a>
+            <a href="index.html"><div class="btn-portfolio-tablet">Portfolio</div></a>
+            <a href="about-cv.html"><div class="btn-about-cv-tablet">About + CV</div></a>
             <a href="#"><div class="btn-contact-tablet">Contact</div></a>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
@@ -53,6 +53,10 @@
     </header>
 
     <!-- pop-up -->
+    <div class="introduction">
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h1>
+    </div>
+
     <div class="email">
       <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
     </div>
@@ -76,80 +80,64 @@
     </div>
 
     <!-- content -->
-    <section class="content">
-
-      <div>
-        <h2 class="intro">Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h2>
-        <p class="quote">Yi-Hsien is experienced with illustration, watercolour painting, visual identity, packaging design, editorial design, typography, web design, user interface design.</p>
-        <div class="cv">
-          <h3>Experience</h3>
-          <ul>
-            <li>
-              <p>2017 - present | <strong>design collaboration</strong>, <a href="https://www.staatsbosbeheer.nl/" target="_blank">Staatsbosbeheer</a></p>
-              <p class="sub">Designing <a href="whats_happening_in_the_mastbos.html">map</a> of forest</p>
-            </li>
-            <li>
-              <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a></p>
-              <p class="sub">Designing <a href="http://www.dynacw.co.jp/FileUpload/Portals/file/DynaFontSample/KinbunGothic.pdf" target="_blank">Kanji typeface</a></p>
-            </li>
-            <li>
-              <p>2014 - 2014 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
-              <p class="sub">Translation of the website of Department of Design (Chinese – English)</p>
-            </li>
-            <li>
-              <p>2013 - 2014 | <strong>part-time employee</strong>, Straits Design Talent Developing Project</p>
-              <p class="sub">Collecting and translating information about international design competitions (English – Chinese, German – Chinese)</p>
-              <p class="sub">Making registration instructions for international design competitions</p>
-            </li>
-            <li>
-              <p>2011 - 2012 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
-              <p class="sub">Translation of design exhibitions and course structure</p>
-              <p class="sub">Office work</p>
-            </li>
-          </ul>
-          <h3>Education</h3>
-          <ul>
-            <li>
-              <p>2015 - 2017 | <strong>Master of Graphic Design</strong>, Akademie voor Kunst en Vormgeving St. Joost, Netherlands</p>
-            </li>
-            <li>
-              <p>2010 - 2014 | <strong>Bachelor of Fine Arts (Department of Design)</strong>, National Taiwan Normal University, Taiwan</p>
-            </li>
-            <li>
-              <p>2006 - 2008, 2009 - 2010 | <strong>Senior High School Diploma (Art specialised class)</strong>, National Yang-Ming Senior High School, Taiwan</p>
-            </li>
-            <li>
-              <p>2008 - 2009 | <strong>AS Level (Fine Art, Graphic Design, Mathematics, Geography)</strong>, Durham Sixth Form Centre, United Kingdom</p>
-            </li>
-          </ul>
-          <h3>Volunteer Experience</h3>
-          <ul>
-            <li>
-              <p>09.2017 - 10.2017 | <strong>volunteer</strong>, Service Civil International (SCI)</p>
-              <p class="sub">Field work in the farm Vestri Pétursey, Iceland</p>
-            </li>
-            <li>
-              <p>07.2012 - 07.2012 | <strong>volunteer</strong>, Service Civil International (SCI)</p>
-              <p class="sub">Preservation of environment and ecology in the farm Hof Waldenstein, Switzerland</p>
-            </li>
-          </ul>
-          <h3>Selected Exhibitions</h3>
-          <ul>
-            <li>
-              <p>2017 | <strong><a href="whats_happening_in_the_mastbos.html">What's Happening in the Mastbos?</a></strong>, Naar Buiten Fair, Staatsbosbeheer, Breda, Netherlands</p>
-            </li>
-            <li>
-              <p>2017 | <strong><a href="whats_happening_in_the_mastbos.html">What's Happening in the Mastbos?</a></strong>, Graduation Exhibition of AKV|St. Joost, Den Bosch, Netherlands</p>
-            </li>
-            <li>
-              <p>2016 | <strong><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a> Packaging Design</strong>, Nieuwe Lusten, Museum of the Image, Breda, Netherlands</p>
-            </li>
-            <li>
-              <p>2014 | <strong>Lares - Home Is Where the Heart Is</strong>, Graduation Exhibition of NTNU, Huashan 1914 Creative Park, Taipei, Taiwan</p>
-            </li>
-          </ul>
+    <section class="projects content">
+      <!-- Down Manual -->
+      <a href="down-manual.html">
+        <div class="project six">
+          <div class="name"><h3>Down Manual</h3></div>
         </div>
-      </div>
+      </a>
+      <!-- Web Design -->
+      <a href="web-design.html">
+        <div class="project five">
+          <div class="name"><h3>Web Design</h3></div>
+        </div>
+      </a>
+      <!-- What's Happening in the Mastbos? -->
+      <a href="whats_happening_in_the_mastbos.html">
+        <div class="project one">
+          <div class="name"><h3>What's Happening in the Mastbos?</h3></div>
+        </div>
+      </a>
+      <!-- Mysterious Creatures in the Forest -->
+      <a href="mysterious-creatures-in-the-forest.html">
+        <div class="project two">
+          <div class="name"><h3>Mysterious Creatures in the Forest</h3></div>
+        </div>
+      </a>
+      <!-- Milk Carton Re-design -->
+      <a href="milk-carton-redesign.html">
+        <div class="project eight">
+          <div class="name"><h3>Milk Carton Re-design</h3></div>
+        </div>
+      </a>
+      <!-- Ritek Solar -->
+      <a href="ritek-solar.html">
+        <div class="project nine">
+          <div class="name"><h3>Ritek Solar</h3></div>
+        </div>
+      </a>
+      <!-- Sinful Dark Chocolate -->
+      <a href="sinful-dark-chocolate.html">
+        <div class="project seven">
+          <div class="name"><h3>Sinful Dark Chocolate</h3></div>
+        </div>
+      </a>
+      <!-- Aria Sicura -->
+      <a href="aria-sicura.html">
+        <div class="project three">
+          <div class="name"><h3>Aria Sicura</h3></div>
+        </div>
+      </a>
+      <!-- Watercolour Palette -->
+      <a href="watercolour-palette.html">
+        <div class="project four">
+          <div class="name"><h3>Watercolour Palette</h3></div>
+        </div>
+      </a>
+      <div class="project blank"></div>
+      <div class="project blank"></div>
+      <div class="project blank"></div>
     </section>
 
     <!-- footer -->
