--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8">
     <title>Yi-Hsien Hung</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119798345-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-119798345-1');
+    </script>
+    
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Sigmar+One|Titan+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
