Add swiss roll page

--- a/down-manual.html
+++ b/down-manual.html
@@ -79,6 +79,7 @@
         <li><a href="down-manual.html">Down Manual</a></li>
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
+        <li><a href="swiss-roll.html">Swiss Roll</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
         <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
         <li><a href="ritek-solar.html">Ritek Solar</a></li>
@@ -94,7 +95,7 @@
         <p class="quote">Illustration | Editorial Design | User Manual</p>
       </div>
       <div class="text-box">
-        <h3>Down Manual</h3>
+        <h3>Down Manual (In Progress)</h3>
         <p>Client: <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018 / <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a></p>
       </div>
 
