--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       gtag('config', 'UA-119798345-1');
     </script>
-    
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Sigmar+One|Titan+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -79,6 +79,7 @@
         <li><a href="down-manual.html">Down Manual</a></li>
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
+        <li><a href="swiss-roll.html">Swiss Roll</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
         <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
         <li><a href="ritek-solar.html">Ritek Solar</a></li>
@@ -93,7 +94,7 @@
       <!-- Down Manual -->
       <a href="down-manual.html">
         <div class="project six">
-          <div class="name"><h3>Down Manual</h3></div>
+          <div class="name"><h3>Down Manual (In Progress)</h3></div>
         </div>
       </a>
       <!-- Web Design -->
@@ -106,6 +107,12 @@
       <a href="whats_happening_in_the_mastbos.html">
         <div class="project one">
           <div class="name"><h3>What's Happening in the Mastbos?</h3></div>
+        </div>
+      </a>
+      <!-- Swiss Roll -->
+      <a href="swiss-roll.html">
+        <div class="project ten">
+          <div class="name"><h3>Swiss Roll</h3></div>
         </div>
       </a>
       <!-- Mysterious Creatures in the Forest -->
