--- a/swiss-roll.html
+++ b/swiss-roll.html
@@ -92,23 +92,15 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Editorial Design | Product Information Sheet</p>
+        <p class="quote">Digital Illustration</p>
       </div>
       <div class="text-box">
-        <h3>Ritek Solar</h3>
-        <p>Client: <a href="https://www.rits-solar.com/index.php/newsevents/news-2016" target="_blank">RiTS Solar B.V.</a><br/>Exhibition: Intersolar<br/>Date: 22 – 24 June 2016<br/>Location: Messe München, Germany</p>
-      </div>
-
-      <div class="caption">
-        <p>The double-sided product information sheet was designed for the exhibition.</p>
+        <h3>Swiss Roll</h3>
+        <p>This is a series of imagination about a Swiss roll.</p>
       </div>
 
       <div class="image-box">
-        <img src="./resources/images/ritek-1.png"/>
-      </div>
-
-      <div class="image-box">
-        <img src="./resources/images/ritek-2.png"/>
+        <img class="small" src="./resources/images/swiss-roll.png"/>
       </div>
 
     </section>
