--- a/about-cv.html
+++ b/about-cv.html
@@ -75,6 +75,7 @@
         <li><a href="down-manual.html">Down Manual</a></li>
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
+        <li><a href="swiss-roll.html">Swiss Roll</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
         <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
         <li><a href="ritek-solar.html">Ritek Solar</a></li>
