--- a/down-manual.html
+++ b/down-manual.html
@@ -99,6 +99,26 @@
         <p>Client: <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018 / <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a></p>
       </div>
 
+      <div class="text-box">
+        <p>A manual booklet 'A Step by Step Guide for Making Your Own Down Jacket' is being designed for artist, <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a>, who went to the Arctic, wearing a down jacket made by himself by collecting goose feathers on the grounds.</p>
+      </div>
+
+      <div class="image-box">
+        <div>
+          <img src="./resources/images/down.gif"/>
+        </div>
+      </div>
+
+      <div class="caption">
+        <p>The project is still in progress. The following is a sketch from one of the manual spreads. This manual will be shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> this year.</p>
+      </div>
+
+      <div class="image-box">
+        <div>
+          <img src="./resources/images/down-manual.jpg"/>
+        </div>
+      </div>
+
     </section>
 
     <!-- footer -->
