--- a/down-manual.html
+++ b/down-manual.html
@@ -92,7 +92,7 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Illustration | Editorial Design | User Manual</p>
+        <p class="quote">Illustration | Editorial Design | User Manual | Animation</p>
       </div>
       <div class="text-box">
         <h3>Down Manual (In Progress)</h3>
