Add mobile cover page

--- a/about-cv.html
+++ b/about-cv.html
@@ -72,6 +72,7 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
