--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
@@ -91,6 +92,12 @@
 
     <!-- content -->
     <section class="projects content">
+      <!-- Mobile Covers -->
+      <a href="mobile-covers.html">
+        <div class="project eleven">
+          <div class="name"><h3>Mobile Covers</h3></div>
+        </div>
+      </a>
       <!-- Down Manual -->
       <a href="down-manual.html">
         <div class="project six">
