--- a/mobile-covers.html
+++ b/mobile-covers.html
@@ -93,42 +93,36 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Information Design | Cartography | Illustration | Editorial Design</p>
+        <p class="quote">Digital Illustration | Watercolour Painting | Mobile Cover Design</p>
       </div>
       <div class="text-box">
-        <h3>What’s Happening in the Mastbos?</h3>
-        <p><em>‘What’s Happening in the Mastbos’</em> is about the connections between humans and forests. I constructed a detailed map of the Mastbos—a plantation forest in the south of Breda, the Netherlands. What’s special about the map is that this map shows the actual events that have happened in the forest. The map was illustrated in a humorous way. By looking at the map, viewers learn humans’ activities in the forest, including good and bad things in order to show the true forest.</p>
+        <h3>Mobile Covers</h3>
       </div>
+
       <div class="image-box">
-        <img class="large" src="./resources/images/mastbos_map.png" alt="mastbos map"/>
-      </div>
-      <div class="text-box">
-        <p>While growing up, I got used to being surrounded by forests and being able to explore in forests. At the time I went to university, I had to move to the largest city in the country. It was then when I realised how different it is to live in an urban jungle. I had to adapt to artificial surroundings. When I talked to people about forests, many of them were indifferent. Currently, over half of the population live in urban areas and the number is growing. Many of us probably live further away from a forest than before. With the division of labour, everyone plays a different role in society instead of hunting and gathering in forests. This is the reason we may be using forests unconsciously.</p>
-        <p>After moving to the Netherlands in 2015, I find that Dutch forests are very different from those in Taiwan. The forests in Taiwan are thicker; the paths are narrow or non-existent. Forests in the Netherlands are neat and thin. Trees seem to be standing in order; there are names for each path, like in a city. These differences inspired me to draw a map of a forest, like how a map of a city was drawn.</p>
-      </div>
-      <div class="carousel">
-        <div class="image-box">
-          <img class="large" src="./resources/images/mastbos-1.png" alt="map part 1"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/mastbos-2.png" alt="map part 2"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/mastbos-3.png" alt="map part 3"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/mastbos-4.png" alt="map part 4"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/mastbos-5.png" alt="map part 5"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/mastbos-6.png" alt="map part 6"/>
+        <div>
+          <img class="large" src="./resources/images/mobile-covers.png"/>
         </div>
       </div>
-      <div class="text-box">
-        <p>I wish to find a way to raise awareness of the fact that we are still connected to forests, even if we do not realise this. My approach is to tell my stories through visually appealing ‘event maps’ that are different from conventional, factual maps. My chosen way was to use illustration to show as many real events happening in a forest as possible, with the purpose of reconnecting people with forests in an engaging way.</p>
+
+      <div class="image-box">
+        <div>
+          <img class="small" src="./resources/images/mobile-monster-whole.png"/>
+        </div>
       </div>
+
+      <div class="carousel-two">
+        <div class="image-box">
+          <img class="large" src="./resources/images/mobile-flora.png" alt="flora"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/mobile-monster.png" alt="monster"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/mobile-phrase.png" alt="phrase"/>
+        </div>
+      </div>
+
     </section>
 
     <!-- footer -->
