--- a/about-cv.html
+++ b/about-cv.html
@@ -115,7 +115,7 @@
             <li>
               <p>2011 - 2012 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
               <p class="sub">Translation of design exhibitions and course structure</p>
-              <p class="sub">Office work</p>
+              <p class="sub">Administrative tasks</p>
             </li>
           </ul>
           <h3>Education</h3>
