Modify down manual title

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <!-- Down Manual -->
       <a href="down-manual.html">
         <div class="project six">
-          <div class="name"><h3>Down Manual (In Progress)</h3></div>
+          <div class="name"><h3>Down Manual<br/>(In Progress)</h3></div>
         </div>
       </a>
       <!-- Web Design -->
