Add infographic page

--- a/animated-infographic.html
+++ b/animated-infographic.html
@@ -94,15 +94,35 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Digital Illustration</p>
+        <p class="quote">Illustration | Infographic| Animation</p>
       </div>
       <div class="text-box">
-        <h3>Swiss Roll</h3>
-        <p>This is a series of imagination about a Swiss roll.</p>
+        <h3>Animated Infographic</h3>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/infographic-1.gif"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/infographic-2.gif"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/infographic-3.gif"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/infographic-5.gif"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/infographic-6.gif"/>
+        </div>
       </div>
 
       <div class="image-box">
-        <img class="small" src="./resources/images/swiss-roll.png"/>
+        <img src="./resources/images/infographic-4.gif"/>
       </div>
 
     </section>
