--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="animated-infographic.html">Animated Infographic</a></li>
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
         <li><a href="web-design.html">Web Design</a></li>
@@ -92,6 +93,12 @@
 
     <!-- content -->
     <section class="projects content">
+      <!-- Animated Infographic -->
+      <a href="animated-infographic.html">
+        <div class="project twelve">
+          <div class="name"><h3>Animated Infographic</h3></div>
+        </div>
+      </a>
       <!-- Mobile Covers -->
       <a href="mobile-covers.html">
         <div class="project eleven">
