--- a/whats_happening_in_the_mastbos.html
+++ b/whats_happening_in_the_mastbos.html
@@ -76,6 +76,7 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="animated-infographic.html">Animated Infographic</a></li>
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
         <li><a href="web-design.html">Web Design</a></li>
