--- a/about-cv.html
+++ b/about-cv.html
@@ -91,7 +91,7 @@
     <section class="content">
 
       <div>
-        <h2 class="intro">Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h2>
+        <h2 class="intro">Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, illustrator, junior web designer based in the Netherlands.</h2>
         <p class="quote">Yi-Hsien is experienced with illustration, watercolour painting, visual identity, packaging design, editorial design, typography, web design, user interface design.</p>
         <div class="cv">
           <h3>Experience</h3>
