--- a/mysterious-creatures-in-the-forest.html
+++ b/mysterious-creatures-in-the-forest.html
@@ -63,7 +63,7 @@
 
     <!-- pop-up -->
     <div class="introduction">
-      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h1>
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, illustrator, junior web designer based in the Netherlands.</h1>
     </div>
 
     <div class="email">
