Add website mockups

--- a/web-design.html
+++ b/web-design.html
@@ -101,6 +101,14 @@
         <p>The following web pages, including this portfolio website you are viewing, were built with HTML, CSS and some jQuery.</p>
       </div>
 
+      <div class="image-box">
+        <img class="large" src="./resources/images/web-mockup.png" alt="Portfolio Website"/>
+      </div>
+
+      <div class="image-box">
+        <img class="small" src="./resources/images/web-structure.png" alt="Portfolio Website"/>
+      </div>
+
       <div class="gallery">
         <div class="image-box">
           <img class="large" src="./resources/images/website-fotomatic.gif" alt="Fotomatic"/>
