--- a/about-cv.html
+++ b/about-cv.html
@@ -97,8 +97,11 @@
           <h3>Experience</h3>
           <ul>
             <li>
-              <p>2017 - present | <strong>design collaboration</strong>, <a href="https://www.staatsbosbeheer.nl/" target="_blank">Staatsbosbeheer</a></p>
-              <p class="sub">Designing <a href="whats_happening_in_the_mastbos.html">map</a> of forest</p>
+              <p>2017 - present | <strong>Graphic Designer | Illustrator</strong>, yihsienhung.com</p>
+              <p class="sub"><a href="whats_happening_in_the_mastbos.html">Design collaboration</a> with <a href="https://www.staatsbosbeheer.nl/" target="_blank">Staatsbosbeheer</a></p>
+              <p class="sub"><a href="down-manual.html">Design collaboration</a> with <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018</p>
+              <p class="sub"><a href="down-manual.html">Design collaboration</a> with artist <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a></p>
+              <p class="sub">Other design tasks</p>
             </li>
             <li>
               <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a></p>
