Modify down manumanual page

--- a/down-manual.html
+++ b/down-manual.html
@@ -112,12 +112,14 @@
       </div>
 
       <div class="caption">
-        <p>The project is still in progress. The following is a sketch from one of the manual spreads. This manual will be shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> this year.</p>
+        <p>The following is the dummy of the manual. This manual will be shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> this year.</p>
       </div>
 
       <div class="image-box">
         <div>
-          <img src="./resources/images/down-manual.jpg"/>
+          <video autoplay loop controls>
+            <source src="./resources/videos/down-manual.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
 
