--- a/down-manual.html
+++ b/down-manual.html
@@ -97,22 +97,13 @@
         <p class="quote">Illustration | Editorial Design | User Manual | Animation</p>
       </div>
       <div class="text-box">
-        <h3>Down Manual (In Progress)</h3>
+        <h3>Down Manual</h3>
         <p>Client: <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018 / <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a></p>
       </div>
 
       <div class="text-box">
         <p>A manual booklet 'A Step by Step Guide for Making Your Own Down Jacket' is being designed for artist, <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a>, who went to the Arctic, wearing a down jacket made by himself by collecting goose feathers on the grounds.</p>
-      </div>
-
-      <div class="image-box">
-        <div>
-          <img src="./resources/images/down.gif"/>
-        </div>
-      </div>
-
-      <div class="caption">
-        <p>The following is the dummy of the manual. This manual will be shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> this year.</p>
+        <p>This manual will be shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> in 2018.</p>
       </div>
 
       <div class="image-box">
@@ -120,6 +111,12 @@
           <video autoplay loop controls>
             <source src="./resources/videos/down-manual.mp4" type="video/mp4">
           </video>
+        </div>
+      </div>
+
+      <div class="image-box">
+        <div>
+          <img src="./resources/images/down.gif"/>
         </div>
       </div>
 
