Modify aria sicura page

--- a/aria-sicura.html
+++ b/aria-sicura.html
@@ -105,57 +105,15 @@
         <img src="./resources/images/aria-sicura-logo.png"/>
       </div>
 
+      <div class="caption">
+        <p>The following is the user manual.</p>
+      </div>
+
       <div class="image-box">
-        <img class="large" src="./resources/images/aria-sicura-manual.png" alt="Manual"/>
-      </div>
-
-      <div class="caption">
-        <p>The following are selected spreads from the user manual.</p>
-      </div>
-
-      <div class="carousel">
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-3.png" alt="User manual spread"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-1.png" alt="Logotype"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-2.png" alt="Logo"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-12.png" alt="User manual spread"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-13.png" alt="User manual spread"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-14.png" alt="User manual spread"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-18.png" alt="User manual spread"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-24.png" alt="User manual spread"/>
-        </div>
-        <div class="image-box">
-          <img class="small" src="./resources/images/aria-sicura-manual-25.png" alt="User manual spread"/>
-        </div>
-      </div>
-
-      <div class="caption">
-        <p>Examples of applications.</p>
-      </div>
-
-      <div class="gallery">
-        <div class="image-box">
-          <img class="large" src="./resources/images/aria-sicura-ad-2.png" alt="Ad"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/aria-sicura-ad-1.png" alt="Ad"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/aria-sicura-ad-3.png" alt="Ad"/>
+        <div>
+          <video autoplay loop controls>
+            <source src="./resources/videos/aria-sicura.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
 
