--- a/watercolour-palette.html
+++ b/watercolour-palette.html
@@ -103,6 +103,24 @@
 
       <div class="gallery">
         <div class="image-box">
+          <img src="./resources/images/watercolour-2018-3.png" alt="blue jay"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-11.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-12.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-13.png"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
           <img class="large" src="./resources/images/watercolour-2015-4.png" alt="apple"/>
         </div>
         <div class="image-box">
@@ -143,18 +161,6 @@
         </div>
         <div class="image-box">
           <img class="large" src="./resources/images/watercolour-2017-7.png"/>
-        </div>
-      </div>
-
-      <div class="gallery">
-        <div class="image-box">
-          <img class="large" src="./resources/images/watercolour-2017-11.png"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/watercolour-2017-12.png"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/watercolour-2017-13.png"/>
         </div>
       </div>
 
