Add cardinal painting

--- a/watercolour-palette.html
+++ b/watercolour-palette.html
@@ -103,7 +103,10 @@
 
       <div class="gallery">
         <div class="image-box">
-          <img src="./resources/images/watercolour-2018-3.png" alt="blue jay"/>
+          <img class="large" src="./resources/images/watercolour-2018-3.png" alt="blue jay"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2018-4.png" alt="cardinal"/>
         </div>
       </div>
 
