Modify down manual texts

--- a/down-manual.html
+++ b/down-manual.html
@@ -103,7 +103,7 @@
 
       <div class="text-box">
         <p>A manual booklet 'A Step by Step Guide for Making Your Own Down Jacket' is being designed for artist, <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a>, who went to the Arctic, wearing a down jacket made by himself by collecting goose feathers on the grounds.</p>
-        <p>This manual will be shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> in 2018.</p>
+        <p>This manual is shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> in 2018.</p>
       </div>
 
       <div class="image-box">
