--- a/about-cv.html
+++ b/about-cv.html
@@ -105,7 +105,7 @@
             </li>
             <li>
               <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a></p>
-              <p class="sub">Designing <a href="http://www.dynacw.co.jp/FileUpload/Portals/file/DynaFontSample/KinbunGothic.pdf" target="_blank">Kanji typeface</a></p>
+              <p class="sub">Designing a set of <a href="http://www.dynacw.co.jp/FileUpload/Portals/file/DynaFontSample/KinbunGothic.pdf" target="_blank">Kanji typeface</a> including 12,000 Kanji characters</p>
             </li>
             <li>
               <p>2014 - 2014 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
