Add page digital drawing

--- a/about-cv.html
+++ b/about-cv.html
@@ -72,6 +72,7 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="digital-drawing.html">Digital Drawing</a></li>
         <li><a href="animated-infographic.html">Animated Infographic</a></li>
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
