--- a/digital-drawing.html
+++ b/digital-drawing.html
@@ -95,38 +95,18 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Illustration | Packaging Design | Information Design</p>
+        <p class="quote">Digital Drawing | Illustration</p>
       </div>
-
       <div class="text-box">
-        <h3>Milk Carton Re-design</h3>
-        <p>Client: <a href="https://www.campina.nl/" target="_blank">Campina</a> / <a href="https://www.shengwenlo.com/melk/" target="_blank">Sheng-Wen Lo</a></p>
-        <p>This is a proposal of a redesign of halfvolle melk carton.</p>
+        <h3>Digital Drawing</h3>
       </div>
 
       <div class="image-box">
-        <img src="./resources/images/milk-cheese.png"/>
-      </div>
-
-      <div class="text-box">
-        <p>The original design of the halfvolle melk carton provides information to the potential buyers: nutrition fact, health benefit of milk, customer service phone number, address, website, etc. But for some reasons, I would like to redesign this milk carton:</p>
-        <ol>
-          <li>The original carton provides consumers a lot of information in texts, which do not normally catch consumers’ eyes.</li>
-          <li>The hierarchy of the texts is not clear, which might mislead consumers to believe that some information is intended to be “hidden”.</li>
-          <li>Photo-like images might not catch consumers’ eyes at the first glance.</li>
-        </ol>
-        <p>For this redesign, a survey about the information on the carton was conducted. According to the responses, many find that the information is not readable, because of the amount and size of texts, and the background colour of the carton.</p>
-        <p>Furthermore, according to the survey we have conducted, when purchasing milk, most consumers do not read the information on the carton, instead, they focus more on the price, organic or not and the design of cartons. Among all the responses, one person said in the survey, <em>I think they are all mostly the same, but if they can spend money on design I think they can also afford a level of acceptable milk quality. Any price that is above average is probably a marketing trick.</em> I don’t read information. It shows that other than price, an inviting design is a key when consumers are selecting milk products. An inviting design not only catches consumers’ eyes but also persuades consumers to buy the product indirectly.</p>
-        <p>For this redesign, my approaches are as following:</p>
-        <ol>
-          <li>Keep the main visual tone the brand wants to reflect.</li>
-          <li>Keep all the information shown on the package.</li>
-          <li>Reduce the advertising sides into only one side, so that there will be more space for serious information about the product, as most people don’t really read the advertisements on the package if there is no direct benefits for them.</li>
-        </ol>
+        <img class="large" src="./resources/images/digital-drawing.jpg"/>
       </div>
 
       <div class="image-box">
-        <img class="small" src="./resources/images/milk.png"/>
+        <img class="large" src="./resources/images/digital-drawing-process.png"/>
       </div>
 
     </section>
