--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="digital-drawing.html">Digital Drawing</a></li>
         <li><a href="animated-infographic.html">Animated Infographic</a></li>
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
@@ -93,6 +94,12 @@
 
     <!-- content -->
     <section class="projects content">
+      <!-- Digital Drawing -->
+      <a href="digital-drawing.html">
+        <div class="project thirteen">
+          <div class="name"><h3>Digital Drawing</h3></div>
+        </div>
+      </a>
       <!-- Animated Infographic -->
       <a href="animated-infographic.html">
         <div class="project twelve">
@@ -165,6 +172,7 @@
           <div class="name"><h3>Watercolour Palette</h3></div>
         </div>
       </a>
+      
       <div class="project blank"></div>
       <div class="project blank"></div>
       <div class="project blank"></div>
