--- a/down-manual.html
+++ b/down-manual.html
@@ -103,7 +103,7 @@
       </div>
 
       <div class="text-box">
-        <p>A manual booklet 'A Step by Step Guide for Making Your Own Down Jacket' is being designed for artist, <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a>, who went to the Arctic, wearing a down jacket made by himself by collecting goose feathers on the grounds.</p>
+        <p>A manual booklet 'A Step by Step Guide for Making Your Own Down Jacket' has been designed for artist, <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a>, who went to the Arctic, wearing a down jacket made by himself by collecting goose feathers on the grounds.</p>
         <p>This manual is shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> in 2018.</p>
       </div>
 
@@ -113,6 +113,14 @@
             <source src="./resources/videos/down-manual.mp4" type="video/mp4">
           </video>
         </div>
+      </div>
+
+      <div class="caption">
+        <p>In addition, a map of Breda in large size is designed as a part of the exhibition.</p>
+      </div>
+
+      <div class="image-box">
+        <img class="large" src="./resources/images/down-map.jpg"/>
       </div>
 
     </section>
