Modify text break

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <!-- Milk Carton Re-design -->
       <a href="milk-carton-redesign.html">
         <div class="project eight">
-          <div class="name"><h3>Milk Carton Re-design</h3></div>
+          <div class="name"><h3>Milk Carton</br>Re-design</h3></div>
         </div>
       </a>
       <!-- Ritek Solar -->
@@ -172,7 +172,7 @@
           <div class="name"><h3>Watercolour Palette</h3></div>
         </div>
       </a>
-      
+
       <div class="project blank"></div>
       <div class="project blank"></div>
       <div class="project blank"></div>
