Add skills and languages

--- a/about-cv.html
+++ b/about-cv.html
@@ -123,6 +123,7 @@
               <p class="sub">Administrative tasks</p>
             </li>
           </ul>
+
           <h3>Education</h3>
           <ul>
             <li>
@@ -149,6 +150,7 @@
               <p class="sub">Preservation of environment and ecology in the farm Hof Waldenstein, Switzerland</p>
             </li>
           </ul>
+
           <h3>Selected Exhibitions</h3>
           <ul>
             <li>
@@ -162,6 +164,56 @@
             </li>
             <li>
               <p>2014 | <strong>Lares - Home Is Where the Heart Is</strong>, Graduation Exhibition of NTNU, Huashan 1914 Creative Park, Taipei, Taiwan</p>
+            </li>
+          </ul>
+
+          <h3>Skills</h3>
+          <ul>
+            <li>
+              <p>Photoshop | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>Illustrator | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>InDesign | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>After Effects | <span class="red">&#9787; &#9787; &#9787;</span> <span class="gray">&#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>Premiere Pro | <span class="red">&#9787; &#9787; &#9787;</span> <span class="gray">&#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>Lightroom | <span class="red">&#9787; &#9787; &#9787;</span> <span class="gray">&#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>HTML, CSS | <span class="red">&#9787; &#9787; &#9787;</span> <span class="gray">&#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>Microsoft Office | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>Analogue Drawing | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>Watercolour Painting | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>Digital Drawing | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+          </ul>
+
+          <h3>Languages</h3>
+          <ul>
+            <li>
+              <p>Mandarin Chinese | <span class="red">&#9787; &#9787; &#9787; &#9787; &#9787;</span></p>
+            </li>
+            <li>
+              <p>English | <span class="red">&#9787; &#9787; &#9787; &#9787;</span> <span class="gray">&#9787;</span></p>
+            </li>
+            <li>
+              <p>German | <span class="red">&#9787; &#9787; &#9787; &#9787;</span> <span class="gray">&#9787;</span></p>
             </li>
           </ul>
         </div>
