Modify working student name

--- a/about-cv.html
+++ b/about-cv.html
@@ -105,20 +105,20 @@
               <p class="sub">Other design tasks</p>
             </li>
             <li>
-              <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a></p>
+              <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a>, Taiwan</p>
               <p class="sub">Designing a set of <a href="http://www.dynacw.co.jp/FileUpload/Portals/file/DynaFontSample/KinbunGothic.pdf" target="_blank">Kanji typeface</a> including 12,000 characters</p>
             </li>
             <li>
-              <p>2014 - 2014 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
+              <p>2014 - 2014 | <strong>working student</strong>, Department of Design, National Taiwan Normal University, Taiwan</p>
               <p class="sub">Translation of the website of Department of Design (Chinese – English)</p>
             </li>
             <li>
-              <p>2013 - 2014 | <strong>part-time employee</strong>, Straits Design Talent Developing Project</p>
+              <p>2013 - 2014 | <strong>working student</strong>, Straits Design Talent Developing Project, Taiwan</p>
               <p class="sub">Collecting and translating information about international design competitions (English – Chinese, German – Chinese)</p>
               <p class="sub">Making registration instructions for international design competitions</p>
             </li>
             <li>
-              <p>2011 - 2012 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
+              <p>2011 - 2012 | <strong>working student</strong>, Department of Design, National Taiwan Normal University, Taiwan</p>
               <p class="sub">Translation of design exhibitions and course structure</p>
               <p class="sub">Administrative tasks</p>
             </li>
