Add red squirrel picture

--- a/watercolour-palette.html
+++ b/watercolour-palette.html
@@ -104,10 +104,13 @@
 
       <div class="gallery">
         <div class="image-box">
-          <img class="large" src="./resources/images/watercolour-2018-3.png" alt="blue jay"/>
+          <img class="small" src="./resources/images/watercolour-2018-7.jpg" alt="red squirrel"/>
         </div>
         <div class="image-box">
           <img class="large" src="./resources/images/watercolour-2018-4.png" alt="cardinal"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2018-3.png" alt="blue jay"/>
         </div>
       </div>
 
