Hide unwanted pages

--- a/den-haag-floating-island.html
+++ b/den-haag-floating-island.html
@@ -96,33 +96,26 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Packaging Design</p>
+        <p class="quote">Digital Drawing | Illustration</p>
       </div>
       <div class="text-box">
-        <h3>Sinful Dark Chocolate</h3>
-        <p>Client: Museum of the Image<br/>Exhibition: Nieuwe Lusten<br/>Date: 2 April – 31 December 2016<br/>Location: Museum of the Image, Breda, Netherlands</p>
+        <h3>Den Haag Floating Island</h3>
       </div>
 
       <div class="image-box">
-        <div>
-          <img src="./resources/images/sinful-figure.png"/>
-        </div>
-      </div>
-
-      <div class="text-box">
-        <p>Year 2016 was the year when Dutch painter Jheronimus Bosch turned 500 years old. To celebrate his birthday, a series of events and exhibitions were held. This package was designed as a part of the 'Nieuwe Lusten' exhibition in the Museum of the Image, Breda, Netherlands.</p>
+        <img class="small" src="./resources/images/floating-island.jpg"/>
       </div>
 
       <div class="image-box">
-        <div>
-          <img class="large" src="./resources/images/sinful.png"/>
-        </div>
+        <img src="./resources/images/island-element-1.png"/>
       </div>
 
       <div class="image-box">
-        <div>
-          <img class="large" src="./resources/images/sinful-print.png"/>
-        </div>
+        <img src="./resources/images/island-element-2.png"/>
+      </div>
+
+      <div class="image-box">
+        <img src="./resources/images/island-element-3.png"/>
       </div>
 
     </section>
