--- a/milk-carton-redesign.html
+++ b/milk-carton-redesign.html
@@ -63,7 +63,7 @@
 
     <!-- pop-up -->
     <div class="introduction">
-      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, illustrator, junior web designer based in the Netherlands.</h1>
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, illustrator.</h1>
     </div>
 
     <div class="email">
@@ -76,18 +76,19 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="den-haag-floating-island.html">Den Haag Floating Island</a></li>
         <li><a href="digital-drawing.html">Digital Drawing</a></li>
-        <li><a href="animated-infographic.html">Animated Infographic</a></li>
+        <!-- <li><a href="animated-infographic.html">Animated Infographic</a></li> -->
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
-        <li><a href="web-design.html">Web Design</a></li>
+        <!-- <li><a href="web-design.html">Web Design</a></li> -->
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="swiss-roll.html">Swiss Roll</a></li>
-        <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
+        <!-- <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li> -->
         <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
-        <li><a href="ritek-solar.html">Ritek Solar</a></li>
+        <!-- <li><a href="ritek-solar.html">Ritek Solar</a></li> -->
         <li><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a></li>
-        <li><a href="aria-sicura.html">Aria Sicura</a></li>
+        <!-- <li><a href="aria-sicura.html">Aria Sicura</a></li> -->
         <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
       </ul>
     </div>
