--- a/den-haag-floating-island.html
+++ b/den-haag-floating-island.html
@@ -96,7 +96,7 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Digital Drawing | Illustration</p>
+        <p class="quote">Digital Illustration</p>
       </div>
       <div class="text-box">
         <h3>Den Haag Floating Island</h3>
