--- a/down-manual.html
+++ b/down-manual.html
@@ -96,7 +96,7 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Illustration | Editorial Design | User Manual | Animation</p>
+        <p class="quote">Illustration | Editorial Design | User Manual</p>
       </div>
       <div class="text-box">
         <h3>Down Manual</h3>
