Add poppies watercolour

--- a/watercolour-palette.html
+++ b/watercolour-palette.html
@@ -105,6 +105,21 @@
 
       <div class="gallery">
         <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-11.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-12.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2018-8.jpg" alt="red squirrel"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-13.png"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
           <img class="small" src="./resources/images/watercolour-2018-7.jpg" alt="red squirrel"/>
         </div>
         <div class="image-box">
@@ -112,18 +127,6 @@
         </div>
         <div class="image-box">
           <img class="large" src="./resources/images/watercolour-2018-3.png" alt="blue jay"/>
-        </div>
-      </div>
-
-      <div class="gallery">
-        <div class="image-box">
-          <img class="large" src="./resources/images/watercolour-2017-11.png"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/watercolour-2017-12.png"/>
-        </div>
-        <div class="image-box">
-          <img class="large" src="./resources/images/watercolour-2017-13.png"/>
         </div>
       </div>
 
