Add web design page

--- a/watercolour-palette.html
+++ b/watercolour-palette.html
@@ -81,7 +81,7 @@
         <!-- <li><a href="animated-infographic.html">Animated Infographic</a></li> -->
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
-        <!-- <li><a href="web-design.html">Web Design</a></li> -->
+        <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="swiss-roll.html">Swiss Roll</a></li>
         <!-- <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li> -->
@@ -101,6 +101,12 @@
       <div class="text-box">
         <h3>Watercolour Palette</h3>
         <p>Watercolour is one of the techniques which make paintings expressive and elegant at the same time. A painting can be an art work on its own; it can also be applied on many different applications, e.g. card, packaging, wallpaper, book cover, illustration, etc.</p>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="small" src="./resources/images/watercolour-2019-2.jpg"/>
+        </div>
       </div>
 
       <div class="gallery">
