--- a/down-manual.html
+++ b/down-manual.html
@@ -81,7 +81,7 @@
         <!-- <li><a href="animated-infographic.html">Animated Infographic</a></li> -->
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
-        <!-- <li><a href="web-design.html">Web Design</a></li> -->
+        <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="swiss-roll.html">Swiss Roll</a></li>
         <!-- <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li> -->
