Add identity page

--- a/about-cv.html
+++ b/about-cv.html
@@ -84,7 +84,7 @@
         <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
         <!-- <li><a href="ritek-solar.html">Ritek Solar</a></li> -->
         <li><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a></li>
-        <!-- <li><a href="aria-sicura.html">Aria Sicura</a></li> -->
+        <li><a href="aria-sicura.html">Aria Sicura</a></li>
         <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
       </ul>
     </div>
