Add artist profile page

--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
           <div class="name"><h3>Down Manual</h3></div>
         </div>
       </a>
+      <!-- Artist Profile -->
+      <a href="artist-profile.html">
+        <div class="project fifteen">
+          <div class="name"><h3>Artist Profile</h3></div>
+        </div>
+      </a>
       <!-- Web Design -->
       <a href="web-design.html">
         <div class="project five">
