--- a/artist-profile.html
+++ b/artist-profile.html
@@ -97,32 +97,19 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Illustration | Editorial Design | User Manual</p>
+        <p class="quote">Editorial Design</p>
       </div>
       <div class="text-box">
-        <h3>Down Manual</h3>
-        <p>Client: <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018 / <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a></p>
+        <h3>Artist Profile - Corine Aalvanger</h3>
+        <p>Client: <a href="http://www.corineaalvanger.com/" target="_blank">Corine Aalvanger</a></p>
       </div>
 
       <div class="text-box">
-        <p>A manual booklet 'A Step by Step Guide for Making Your Own Down Jacket' has been designed for artist, <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a>, who went to the Arctic, wearing a down jacket made by himself by collecting goose feathers on the grounds.</p>
-        <p>This manual is shown together with Sheng-Wen's works during <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> in 2018.</p>
+        <p>This artist profile was designed for artist, <a href="http://www.corineaalvanger.com/" target="_blank">Corine Aanvanger</a>, as a personal orientation of past, present and future. The information was divided into several categories; items in each category were connected by lines. The relationship between each categories can be identified by their relative position.</p>
       </div>
 
       <div class="image-box">
-        <div>
-          <video autoplay loop controls>
-            <source src="./resources/videos/down-manual.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-
-      <div class="caption">
-        <p>In addition, a map of Breda in large size is designed as a part of the exhibition.</p>
-      </div>
-
-      <div class="image-box">
-        <img class="large" src="./resources/images/down-map.jpg"/>
+        <img class="large" src="./resources/images/artist-profile.jpg"/>
       </div>
 
     </section>
