Modify about and cv

--- a/about-cv.html
+++ b/about-cv.html
@@ -115,7 +115,7 @@
               <p class="sub">Translation of the website of Department of Design (Chinese – English)</p>
             </li>
             <li>
-              <p>12.2013 - 02.2014 | <strong>working student</strong>, Straits Design Talent Developing Project, Taiwan</p>
+              <p>12.2013 - 02.2014 | <strong>working student</strong>, Taiwan Cultural and Creative Industry Association, Taiwan</p>
               <p class="sub">Collecting and translating information about international design competitions (English – Chinese, German – Chinese)</p>
               <p class="sub">Making registration instructions for international design competitions</p>
             </li>
