Mofify responsive design

--- a/animated-infographic.html
+++ b/animated-infographic.html
@@ -2,6 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <!-- responsive effects -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Yi-Hsien Hung</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -76,16 +80,18 @@
 
     <div class="drop-menu">
       <ul>
+        <li><a href="den-haag-floating-island.html">Den Haag Floating Island</a></li>
         <li><a href="digital-drawing.html">Digital Drawing</a></li>
-        <li><a href="animated-infographic.html">Animated Infographic</a></li>
+        <!-- <li><a href="animated-infographic.html">Animated Infographic</a></li> -->
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
+        <li><a href="artist-profile.html">Artist Profile</a></li>
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="swiss-roll.html">Swiss Roll</a></li>
-        <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
+        <!-- <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li> -->
         <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
-        <li><a href="ritek-solar.html">Ritek Solar</a></li>
+        <!-- <li><a href="ritek-solar.html">Ritek Solar</a></li> -->
         <li><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a></li>
         <li><a href="aria-sicura.html">Aria Sicura</a></li>
         <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
@@ -130,7 +136,7 @@
 
     <!-- footer -->
     <footer class="box">
-      <p>Copyright &copy; 2018 Yi-Hsien Hung. All rights reserved.</p>
+      <p>Copyright &copy; 2019 Yi-Hsien Hung. All rights reserved.</p>
     </footer>
 
   </body>
