--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <!-- responsive effects -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Yi-Hsien Hung</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -81,6 +85,7 @@
         <!-- <li><a href="animated-infographic.html">Animated Infographic</a></li> -->
         <li><a href="mobile-covers.html">Mobile Covers</a></li>
         <li><a href="down-manual.html">Down Manual</a></li>
+        <li><a href="artist-profile.html">Artist Profile</a></li>
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="swiss-roll.html">Swiss Roll</a></li>
