--- a/swiss-roll.html
+++ b/swiss-roll.html
@@ -2,6 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <!-- responsive effects -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Yi-Hsien Hung</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
